Redução da altura do mapa de localização estratégica em 1/3

--- a/styles.css
+++ b/styles.css
@@ -513,6 +513,10 @@ img {
     box-shadow: var(--box-shadow);
 }
 
+#strategic-map.map-container {
+    height: 508px;
+}
+
 .infra-data {
     display: flex;
     flex-direction: column;
